<resources>
    <string name="app_name">MaterialUI</string>
    <string name="chip_one">Chip One</string>
    <string name="chip_two">Chip Two</string>
    <string name="chip_three">Chip Three</string>
    <string name="cardview_text">This is a card view text as a placeholder to test</string>
    <string name="checkbox_1">Checkbox 1</string>
    <string name="checkbox_2">Checkbox 2</string>
    <string name="checkbox_3">Checkbox 3</string>
    <string name="radio_1">Radio 1</string>
    <string name="radio_2">Radio 2</string>
    <string name="switch_1">Switch 1</string>
    <string name="switch_2">Switch 2</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="fab">fab</string>
    <string name="home">HOME</string>
    <string name="help">HELP</string>
    <string name="contact">CONTACT</string>
    <string name="color_primary">Color Primary</string>
    <string name="color_on_primary">Color On Primary</string>
    <string name="color_primary_container">Color Primary Container</string>
    <string name="color_on_primary_container">Color On Primary Container</string>
    <string name="color_primary_inverse">Color Primary Inverse</string>
    <string name="color_secondary">Color Secondary</string>
    <string name="color_on_secondary">Color On Secondary</string>
    <string name="color_secondary_container">Color Secondary Container</string>
    <string name="color_on_secondary_container">Color On Secondary Container</string>
    <string name="color_tertiary">Color Tertiary</string>
    <string name="color_on_tertiary">Color On Tertiary</string>
    <string name="color_tertiary_container">Color Tertiary Container</string>
    <string name="color_on_tertiary_container">Color On Tertiary Container</string>
    <string name="color_error">Color Error</string>
    <string name="color_on_error">Color On Error</string>
    <string name="color_error_container">Color Error Container</string>
    <string name="color_on_error_container">Color On Error Container</string>
    <string name="color_outline">Color Outline</string>
    <string name="color_background">Color Background</string>
    <string name="color_on_background">Color On Background</string>
    <string name="color_surface">Color Surface</string>
    <string name="color_on_surface">Color On Surface</string>
    <string name="color_surface_variant">Color Surface Variant</string>
    <string name="color_on_surface_variant">Color On Surface Variant</string>
    <string name="color_surface_inverse">Color Surface Inverse</string>
    <string name="color_on_surface_inverse">Color On Surface Inverse</string>
</resources>