<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?attr/colorBackground">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/toolBarColor"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Material UI"
        app:titleTextColor="?attr/toolBarTextColor"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="ScrollViewCount">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:ignore="MissingClass">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/chip_one"
                    android:elevation="2dp"
                    android:background="?attr/cardColor"
                    android:textColor="?attr/textColor"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/chip_two"
                    android:elevation="2dp"
                    android:background="?attr/cardColor"
                    android:textColor="?attr/textColor"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/chip_three"
                    android:elevation="2dp"
                    android:background="?attr/cardColor"
                    android:textColor="?attr/textColor"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:layout_gravity="start"
                        android:src="@drawable/bg"
                        android:scaleType="fitXY"/>

                    <TextView
                        android:background="?attr/cardColor"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="@string/cardview_text"
                        android:padding="10dp"
                        android:textSize="20sp"
                        android:layout_gravity="end"
                        android:fontFamily="sans-serif-light"
                        android:textColor="?attr/textColor"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/checkbox_1"
                android:buttonTint="?attr/colorPrimary"
                android:textColor="?attr/textColor"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/checkbox_2"
                android:buttonTint="?attr/colorPrimary"
                android:textColor="?attr/textColor"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/checkbox_3"
                android:buttonTint="?attr/colorPrimary"
                android:textColor="?attr/textColor"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:checkedButton="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/radio_1"
                    android:buttonTint="?attr/colorPrimary"
                    android:textColor="?attr/textColor"/>

                <RadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/radio_2"
                    android:textColor="?attr/textColor"/>

            </RadioGroup>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/switch_1"
                android:textColor="?attr/textColor"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/switch_2"
                android:textColor="?attr/textColor"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="start"
                    android:text="@string/button_1"
                    android:backgroundTint="?attr/colorPrimaryContainer"
                    android:textColor="?attr/textColor"
                    android:layout_marginEnd="5dp"
                    style="@style/Widget.Material3.Button.ElevatedButton"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="end"
                    android:text="@string/button_2"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="?attr/colorPrimaryContainer"
                    android:textColor="?attr/textColor"
                    style="@style/Widget.Material3.Button.ElevatedButton"/>

            </LinearLayout>


            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/activity_colors"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="130dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_plus"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        android:contentDescription="@string/fab" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>